--- a/add-index.html
+++ b/add-index.html
@@ -246,6 +246,12 @@
 
               <!-- Botão de Deploy Centralizado -->
               <div class="text-center mb-4">
+                <!-- Botão para visualizar contrato -->
+                <button id="preview-contract-btn" class="btn btn-outline-info btn-lg px-4 py-2 me-3">
+                  <i class="bi bi-eye me-2"></i>
+                  VER CONTRATO
+                </button>
+                
                 <button id="deploy-token-btn" class="btn btn-success btn-lg px-5 py-3 fw-bold" disabled>
                   <i class="bi bi-rocket-takeoff me-2"></i>
                   CRIAR TOKEN
@@ -308,6 +314,9 @@
                         </button>
                         <button class="btn btn-success" id="add-to-metamask-btn">
                           <i class="bi bi-wallet2 me-1"></i>Adicionar ao MetaMask
+                        </button>
+                        <button class="btn btn-info" id="view-deployed-contract-btn">
+                          <i class="bi bi-code-slash me-1"></i>Ver Código Deployado
                         </button>
                       </div>
                     </div>
