atualização add-index.html

--- a/add-index.html
+++ b/add-index.html
@@ -344,9 +344,40 @@
                       </button>
                     </div>
                     <div class="col-12">
-                      <div class="text-center text-muted small">
-                        <div>Versão Solidity: <code class="text-info">v0.8.26</code></div>
-                        <div>Otimização: <code class="text-success">200 runs</code></div>
+                      <!-- Caixa Azul - Informações de Verificação -->
+                      <div class="card bg-primary bg-opacity-10 border-primary mt-3">
+                        <div class="card-header bg-primary text-white">
+                          <h6 class="mb-0">
+                            <i class="bi bi-shield-check me-2"></i>Informações de Verificação
+                          </h6>
+                        </div>
+                        <div class="card-body text-white">
+                          <div class="row g-2">
+                            <div class="col-md-6">
+                              <strong class="text-primary">Compiler Version:</strong><br>
+                              <code class="text-info bg-dark px-2 py-1 rounded">v0.8.30+commit.8a97fa7a</code>
+                            </div>
+                            <div class="col-md-6">
+                              <strong class="text-primary">Optimization:</strong><br>
+                              <span class="badge bg-success">✅ Enabled</span> 
+                              <code class="text-info">200 runs</code>
+                            </div>
+                            <div class="col-md-6">
+                              <strong class="text-primary">License Type:</strong><br>
+                              <code class="text-info bg-dark px-2 py-1 rounded">MIT License</code>
+                            </div>
+                            <div class="col-md-6">
+                              <strong class="text-primary">EVM Version:</strong><br>
+                              <code class="text-info bg-dark px-2 py-1 rounded">default</code>
+                            </div>
+                          </div>
+                          <div class="mt-3">
+                            <small class="text-muted">
+                              <i class="bi bi-info-circle me-1"></i>
+                              Use essas configurações exatas para verificar o contrato no BSCScan ou EtherScan
+                            </small>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
