cria sessões ocultas

--- a/add-index.html
+++ b/add-index.html
@@ -64,7 +64,7 @@
             </section>
 
             <!-- Seção 2: Informações Básicas do Token -->
-            <section id="section-basic-info" class="creation-section active section-enabled">
+            <section id="section-basic-info" class="creation-section" style="display: none;">
               <div class="section-header">
                 <h4 class="text-primary mb-1"><i class="bi bi-info-circle me-2"></i>2. Informações Básicas do Token</h4>
                 <p class="text-muted">Defina as características fundamentais do seu contrato ERC-20.</p>
@@ -149,7 +149,7 @@
                   <!-- Botão Criar Token -->
                   <div class="mt-4">
                     <button id="create-token-btn" type="button" class="btn btn-success btn-lg shadow-lg"
-                      style="width: 100%; font-weight: bold;">
+                      style="width: 100%; font-weight: bold; display: none;">
                       <i class="bi bi-rocket-takeoff me-2"></i>Criar Token
                     </button>
                   </div>
@@ -158,7 +158,7 @@
             </section>
 
             <!-- Seção 3: Links do Token -->
-            <section id="section-result" class="creation-section active section-enabled">
+            <section id="section-result" class="creation-section" style="display: none;">
               <div class="section-header">
                 <h4 class="text-primary mb-1"><i class="bi bi-link-45deg me-2"></i>3. Links do contrato criado</h4>
                 <p class="text-muted">Informações e links úteis do seu contrato que foi gerado.</p>
@@ -219,7 +219,7 @@
             </section>
 
             <!-- Seção 4: Verificação do Contrato do Token -->
-            <section id="section-veri" class="creation-section active section-enabled">
+            <section id="section-veri" class="creation-section" style="display: none;">
               <div class="section-header">
                 <h4 class="text-primary mb-1">
                   <i class="bi bi-file-break me-2"></i>4. Verificação do Contrato do Token
