criacao e verificaçcao do contrato

--- a/add-index.html
+++ b/add-index.html
@@ -189,7 +189,8 @@
                           <i class="bi bi-eye"></i>
                         </button>
                         <button class="btn btn-outline-warning" type="button" id="add-to-metamask-btn" title="Adicionar ao MetaMask">
-                          <i class="bi bi-wallet2"></i>
+                          <img src="https://raw.githubusercontent.com/MetaMask/brand-resources/master/SVG/metamask-fox.svg" 
+                               alt="MetaMask" style="width: 16px; height: 16px;">
                         </button>
                       </div>
                     </div>
