animações no botão de criar token

--- a/add-index.html
+++ b/add-index.html
@@ -25,6 +25,8 @@
   <link href="styles/globals.css" rel="stylesheet">
   <!-- Estilos customizados -->
   <link href="styles/progressive-flow.css" rel="stylesheet">
+  <!-- Animações do botão -->
+  <link href="styles/button-animations.css" rel="stylesheet">
 
 </head>
 
@@ -148,7 +150,7 @@
 
                   <!-- Botão Criar Token -->
                   <div class="mt-4">
-                    <button id="create-token-btn" type="button" class="btn btn-success btn-lg shadow-lg"
+                    <button id="create-token-btn" type="button" class="btn btn-warning btn-lg shadow-lg"
                       style="width: 100%; font-weight: bold; display: none;">
                       <i class="bi bi-rocket-takeoff me-2"></i>Criar Token
                     </button>
