animação do botão

--- a/add-index.html
+++ b/add-index.html
@@ -102,10 +102,16 @@
                         <i class="bi bi-123 text-primary me-2"></i>Decimais
                       </label>
                       <select class="form-control bg-dark text-white border-secondary" id="decimals">
-                        <option value="18" selected>18 (Padrão - recomendado)</option>
-                        <option value="8">8 (Como Bitcoin)</option>
-                        <option value="6">6 (Como USDC)</option>
-                        <option value="0">0 (Tokens inteiros)</option>
+                        <option value="18" selected>18</option>
+                        <option value="16">16</option>
+                        <option value="14">14</option>
+                        <option value="12">12</option>
+                        <option value="10">10</option>
+                        <option value="08">08</option>
+                        <option value="06">06</option>
+                        <option value="04">04</option>
+                        <option value="02">02</option>
+                        <option value="00">00</option>
                       </select>
                       <div class="form-text text-muted">Precisão decimal do token</div>
                     </div>
@@ -150,7 +156,7 @@
 
                   <!-- Botão Criar Token -->
                   <div class="mt-4">
-                    <button id="create-token-btn" type="button" class="btn btn-warning btn-lg shadow-lg"
+                    <button id="create-token-btn" type="button" class="btn btn-lg shadow-lg"
                       style="width: 100%; font-weight: bold; display: none;">
                       <i class="bi bi-rocket-takeoff me-2"></i>Criar Token
                     </button>
