--- a/wallet.html
+++ b/wallet.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-md-4">
                 <button id="connect-metamask-btn" type="button" class="btn btn-warning w-100 fw-bold">
-                    <i class="bi bi-wallet2 me-2"></i>CONECTAR
+                    <i class="bi bi-wallet-fill me-2"></i>CONECTAR
                 </button>
             </div>
         </div>
