limpando os arquivos e repositorio

--- a/add-index.html
+++ b/add-index.html
@@ -199,15 +199,13 @@
                         <button class="btn btn-outline-info" type="button" id="copy-contract-btn" title="Copiar">
                           <i class="bi bi-clipboard"></i>
                         </button>
-                        <button class="btn btn-outline-primary" type="button" id="view-contract-btn"
-                          title="Ver no Explorer">
+                        <button class="btn btn-outline-primary" type="button" id="view-explorer-btn" title="Ver no Explorer">
                           <i class="bi bi-eye"></i>
                         </button>
-                        <button class="btn btn-outline-warning" type="button" id="add-to-metamask-btn"
-                          title="Adicionar ao MetaMask">
+                        <button class="btn btn-outline-warning" type="button" id="add-to-metamask-btn" title="Adicionar ao MetaMask">
                           <img
-                            src="https://raw.githubusercontent.com/MetaMask/brand-resources/master/SVG/metamask-fox.svg"
-                            alt="MetaMask" style="width: 16px; height: 16px;">
+                            src="imgs/metamask-fox.svg"
+                            alt="MetaMask" style="width: 32px; height: 32px;">
                         </button>
                       </div>
                     </div>
@@ -215,7 +213,7 @@
                     <!-- Transaction Hash -->
                     <div class="col-12">
                       <label for="network-display" class="form-label text-white">
-                        <i class="bi bi-globe text-primary me-2"></i>Transaction Hash
+                        <i class="bi bi-globe text-primary me-2"></i>Código de Transação
                       </label>
 
                       <div class="input-group mb-2">
