--- a/add-index.html
+++ b/add-index.html
@@ -223,8 +223,7 @@
                         <button class="btn btn-outline-info" type="button" id="copy-hash-btn" title="Copiar">
                           <i class="bi bi-clipboard"></i>
                         </button>
-                        <button class="btn btn-outline-primary" type="button" id="view-hash-btn"
-                          title="Ver no Explorer">
+                        <button class="btn btn-outline-primary" type="button" id="view-hash-btn" title="Ver no Explorer">
                           <i class="bi bi-eye"></i>
                         </button>
                       </div>
@@ -370,6 +369,75 @@
 
   <!-- Main Token Creation Script -->
   <script src="js/add-index.js"></script>
+
+  <!-- Modals -->
+  <!-- Modal de Contrato -->
+  <div class="modal fade" id="contractModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content bg-dark text-white border-primary">
+        <div class="modal-header border-secondary">
+          <h5 class="modal-title">
+            <i class="bi bi-file-earmark-code me-2"></i>
+            <span id="contract-modal-title">Código do Contrato</span>
+          </h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <small class="text-muted">Código fonte do contrato ERC-20</small>
+            <div class="btn-group">
+              <button type="button" class="btn btn-outline-success btn-sm" onclick="copyModalCode()">
+                <i class="bi bi-clipboard me-1"></i>Copiar
+              </button>
+              <button type="button" class="btn btn-outline-primary btn-sm" onclick="downloadModalCode()">
+                <i class="bi bi-download me-1"></i>Baixar
+              </button>
+            </div>
+          </div>
+          <div class="bg-black rounded p-3" style="max-height: 60vh; overflow-y: auto;">
+            <pre id="contract-modal-code" class="text-light mb-0" style="font-size: 11px; line-height: 1.4; white-space: pre-wrap;"></pre>
+          </div>
+        </div>
+        <div class="modal-footer border-secondary">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal de Preview do Contrato -->
+  <div class="modal fade" id="contractPreviewModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content bg-dark text-white">
+        <div class="modal-header border-secondary">
+          <h5 class="modal-title">
+            <i class="bi bi-file-code me-2"></i>
+            <span id="preview-modal-title">Preview do Contrato</span>
+          </h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div class="d-flex justify-content-between mb-3">
+            <small class="text-muted">
+              <i class="bi bi-info-circle me-1"></i>
+              <span id="preview-token-info">Token Information</span>
+            </small>
+            <button class="btn btn-sm btn-outline-info" onclick="copyContractCode()">
+              <i class="bi bi-clipboard me-1"></i>Copiar Código
+            </button>
+          </div>
+          <pre class="bg-black p-3 rounded" style="max-height: 400px; overflow-y: auto;"><code id="preview-contract-code"></code></pre>
+        </div>
+        <div class="modal-footer border-secondary">
+          <button type="button" class="btn btn-info" onclick="downloadSolidityFile()">
+            <i class="bi bi-download me-2"></i>Baixar Arquivo
+          </button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
