verificador add-index.html

--- a/add-index.html
+++ b/add-index.html
@@ -252,7 +252,7 @@
 
                 <div class="card-body">
                   <!-- como verificar um contrato -->
-                  <div class="row mt-3" id="network-info-section" style="display: none;">
+                  <div class="row mt-3" id="network-info-section">
                     <div class="col-12">
                       <div class="alert alert-info mb-0">
                         <strong>Como usar os botões:</strong>
