add-index.html fechado

--- a/add-index.html
+++ b/add-index.html
@@ -158,11 +158,11 @@
                   <div class="mt-4">
                     <button id="create-token-btn" type="button" class="btn btn-lg shadow-lg btn-primary-custom"
                       style="width: 100%; font-weight: bold; display: none;" data-steps='[
-                        {"text": "... Gerar Contrato e Token ....", "icon": "bi-gear-fill"},
-                        {"text": "... Compilando .....", "icon": "bi-code-slash"},
-                        {"text": "... Deploy ......", "icon": "bi-upload"},
-                        {"text": "... Configurando ....", "icon": "bi-sliders"},
-                        {"text": ".... Contrato e Token Criados com Sucesso ......", "icon": "bi-check-circle-fill"}
+                        {"text": " Gerar Contrato e Token", "icon": "bi-gear-fill"},
+                        {"text": " Compilando", "icon": "bi-code-slash"},
+                        {"text": " Deploy", "icon": "bi-upload"},
+                        {"text": " Configurando", "icon": "bi-sliders"},
+                        {"text": " Contrato e Token Criados com Sucesso", "icon": "bi-check-circle-fill"}
                       ]'>
                       <i class="bi bi-rocket-takeoff me-2"></i>Criar Token
                     </button>
@@ -189,7 +189,7 @@
                     <!-- Endereço do Contrato -->
                     <div class="col-12">
                       <label for="network-display" class="form-label text-white">
-                        <i class="bi bi-globe text-primary me-2"></i>Endereço do Contrato
+                        <i class="bi bi-cast text-primary me-2"></i>Endereço do Contrato
                       </label>
 
                       <div class="input-group mb-2">
@@ -213,7 +213,7 @@
                     <!-- Transaction Hash -->
                     <div class="col-12">
                       <label for="network-display" class="form-label text-white">
-                        <i class="bi bi-globe text-primary me-2"></i>Código de Transação
+                        <i class="bi bi-upc-scan text-primary me-2"></i>Código de Transação
                       </label>
 
                       <div class="input-group mb-2">
@@ -277,13 +277,13 @@
                     <div class="row g-4">
                       <div class="col-6">
                         <label for="network-display" class="form-label text-white">
-                          <i class="bi bi-tag text-primary me-2"></i>Compiler Version
+                          <i class="bi bi-backspace-reverse text-primary me-2"></i>Compiler Version
                         </label>
                         <label for="network-display" class="form-label text-success">v0.8.30+commit.8a97fa7a</label>
                       </div>
                       <div class="col-6">
                         <label for="network-display" class="form-label text-white">
-                          <i class="bi bi-tag text-primary me-2"></i>Optimization
+                          <i class="bi bi-hr text-primary me-2"></i>Optimization
                         </label>
                         <label for="network-display" class="form-label text-success">Enabled - 200 runs</label>
                       </div>
@@ -291,14 +291,14 @@
                     <div class="row g-4">
                       <div class="col-6">
                         <label for="network-display" class="form-label text-white">
-                          <i class="bi bi-tag text-primary me-2"></i>License Type
+                          <i class="bi bi-blockquote-left text-primary me-2"></i>License Type
                         </label>
                         <label for="network-display" class="form-label text-success">MIT License</label>
                       </div>
 
                       <div class="col-6">
                         <label for="network-display" class="form-label text-white">
-                          <i class="bi bi-tag text-primary me-2"></i>EVM Version:
+                          <i class="bi bi-blockquote-right text-primary me-2"></i>EVM Version:
                         </label>
                         <label for="network-display" class="form-label text-success"> Default</label>
                       </div>
@@ -332,7 +332,7 @@
 
             <!-- Botão Limpar Tudo -->
             <div class="mt-3">
-              <button id="clear-all-btn" class="btn btn-warning w-100">
+              <button id="clear-all-btn" class="btn btn-danger w-100">
                 <i class="bi bi-arrow-clockwise me-2"></i>Limpar e Recomeçar
               </button>
             </div>
