--- a/add-index.html
+++ b/add-index.html
@@ -332,7 +332,7 @@
 
             <!-- Botão Limpar Tudo -->
             <div class="mt-3">
-              <button id="clear-all-btn" class="btn btn-danger w-100">
+              <button id="clear-all-btn" class="btn btn-warning w-100">
                 <i class="bi bi-arrow-clockwise me-2"></i>Limpar e Recomeçar
               </button>
             </div>
