voltar ao primeiro ponto sem tradução

--- a/header.html
+++ b/header.html
@@ -81,7 +81,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     console.error('Erro ao conectar wallet:', error);
                 }
             } else {
-                alert('MetaMask nÃo encontrado! Por favor, instale o MetaMask.');
+                alert('MetaMask não encontrado! Por favor, instale o MetaMask.');
             }
         });
     }
