--- a/header.html
+++ b/header.html
@@ -8,8 +8,8 @@
         </a>
 
         <!-- Mobile Toggle -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -27,66 +27,36 @@
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
                         <i class="bi bi-tools me-1"></i>Ferramentas
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-shield-check me-2"></i>Verificar Token</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-shield-check me-2"></i>Verificar Token</a>
+                        </li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-search me-2"></i>Explorar Tokens</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-book me-2"></i>DocumentAção</a></li>
                     </ul>
                 </li>
             </ul>
 
-            <!-- Wallet Connection -->
-            <div class="d-flex align-items-center">
-                <button id="connectWallet" class="btn btn-outline-primary me-2">
-                    <i class="bi bi-wallet2 me-1"></i>
-                    <span id="walletText">Conectar Wallet</span>
-                </button>
-                <div class="dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-globe"></i>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-flag me-2"></i>Português</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-flag me-2"></i>English</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-flag me-2"></i>Español</a></li>
-                    </ul>
-                </div>
+            <!-- Wallet Connection Container - Controlado pelo JS -->
+            <div id="wallet-container" class="d-flex align-items-center">
+                <!-- Botão será criado pelo JavaScript -->
             </div>
         </div>
     </div>
 </nav>
 
-<script>
-// Wallet Connection Logic
-document.addEventListener('DOMContentLoaded', function() {
-    const connectWalletBtn = document.getElementById('connectWallet');
-    const walletText = document.getElementById('walletText');
-    
-    if (connectWalletBtn) {
-        connectWalletBtn.addEventListener('click', async function() {
-            if (typeof window.ethereum !== 'undefined') {
-                try {
-                    const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-                    if (accounts.length > 0) {
-                        const shortAddress = accounts[0].substring(0, 6) + '...' + accounts[0].substring(38);
-                        walletText.textContent = shortAddress;
-                        connectWalletBtn.classList.remove('btn-outline-primary');
-                        connectWalletBtn.classList.add('btn-success');
-                    }
-                } catch (error) {
-                    console.error('Erro ao conectar wallet:', error);
-                }
-            } else {
-                alert('MetaMask não encontrado! Por favor, instale o MetaMask.');
-            }
-        });
-    }
+<!-- Script da Wallet - Cria e controla o botão -->
+<script src="js/shared/wallet-header.js"></script>
 
-    // Active page highlighting
+<script>
+// Active page highlighting
+document.addEventListener('DOMContentLoaded', function() {
     const currentPage = window.location.pathname.split('/').pop() || 'index.html';
     const navLinks = document.querySelectorAll('.nav-link[href]');
     navLinks.forEach(link => {
@@ -96,9 +66,3 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
-
-
-
-
-
-
