refatora sistema de wallet: implementa Wallet Universal e simplifica Wallet Header

--- a/header.html
+++ b/header.html
@@ -45,14 +45,11 @@
 
             <!-- Wallet Connection Container - Controlado pelo JS -->
             <div id="wallet-container" class="d-flex align-items-center">
-                <!-- Botão será criado pelo JavaScript -->
+                <!-- Botão e elementos serão criados pelo JavaScript -->
             </div>
         </div>
     </div>
 </nav>
-
-<!-- Script da Wallet - Cria e controla o botão -->
-<script src="js/shared/wallet-header.js"></script>
 
 <script>
 // Active page highlighting
