--- a/link-index.html
+++ b/link-index.html
@@ -198,6 +198,9 @@
 <!-- Template Loader -->
 <script src="js/template-loader.js"></script>
 
+<!-- Wallet Universal System -->
+<script src="js/shared/wallet-universal.js"></script>
+
 <!-- Módulo de GerAção de Links -->
 <script type="module" src="js/link-index.js"></script>
 
