--- a/index1.html
+++ b/index1.html
@@ -525,7 +525,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/template-loader.js"></script>
-    <script src="js/shared/wallet-universal.js"></script>
+    <script src="js/shared/wallet.js"></script>
     <script src="js/shared/animacoes.js"></script>
 </body>
 </html>
