--- a/link-index.html
+++ b/link-index.html
@@ -199,7 +199,7 @@
 <script src="js/template-loader.js"></script>
 
 <!-- Wallet Universal System -->
-<script src="js/shared/wallet-universal.js"></script>
+<script src="js/shared/wallet.js"></script>
 
 <!-- Módulo de GerAção de Links -->
 <script type="module" src="js/link-index.js"></script>
