--- a/widget-all/setup.html
+++ b/widget-all/setup.html
@@ -244,8 +244,8 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-4 mb-2">
-                                            <a href="demo.html" class="btn btn-outline-primary w-100">
-                                                <i class="bi bi-display me-2"></i>Página Demo
+                                            <a href="pages/index.html" class="btn btn-outline-primary w-100">
+                                                <i class="bi bi-globe me-2"></i>Site Oficial
                                             </a>
                                         </div>
                                         <div class="col-md-4 mb-2">
